--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -100,6 +100,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c471407",
+   "metadata": {},
+   "source": [
+    "inputs = tokenizer.apply_chat_template(\n",
+    "    messages,\n",
+    "    add_generation_promt=True,\n",
+    "    tokenize=True,\n",
+    "    return_dict=True,\n",
+    "    return_tensors=\"pt\",\n",
+    ").to(device)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dec93db2",
